--- a/package.json
+++ b/package.json
@@ -11,53 +11,53 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
-    "@radix-ui/react-alert-dialog": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-alert-dialog": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-dropdown-menu": "^2.1.4",
     "@radix-ui/react-label": "^2.1.1",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.4",
+    "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.4",
-    "@radix-ui/react-visually-hidden": "^1.1.0",
+    "@radix-ui/react-visually-hidden": "^1.1.1",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.9",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.1",
-    "http": "^0.0.1-security",
+    "embla-carousel-react": "^8.5.1",
+    "http": "0.0.1-security",
     "ioredis": "^5.4.1",
     "jose": "^5.9.6",
     "lucide-react": "^0.454.0",
-    "mongoose": "^8.8.0",
+    "mongoose": "^8.9.2",
     "next": "15.0.2",
-    "next-auth": "^4.24.10",
-    "react": "19.0.0-rc-02c0e824-20241028",
+    "next-auth": "^4.24.11",
+    "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
     "react-hook-form": "^7.54.1",
-    "react-icons": "^5.3.0",
+    "react-icons": "^5.4.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^20.17.10",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/socket.io": "^3.0.1",
+    "@types/react": "^18.3.17",
+    "@types/react-dom": "^18.3.5",
+    "@types/socket.io": "^3.0.2",
     "@types/socket.io-client": "^1.4.36",
     "@types/ws": "^8.5.13",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "15.0.2",
-    "fluid-tailwind": "^1.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "fluid-tailwind": "^1.0.4",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.2"
   }
 }
