--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "next-auth": "^4.24.11",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-02c0e824-20241028",
+    "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
     "socket.io": "^4.8.1",
