--- a/package.json
+++ b/package.json
@@ -38,10 +38,12 @@
     "react-dom": "18.3.1",
     "react-hook-form": "^7.54.1",
     "react-icons": "^5.4.0",
+    "scheduler": "^0.25.0",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "use-context-selector": "^2.0.0",
     "ws": "^8.18.0",
     "zod": "^3.24.1"
   },
